--- a/WpfApp2.csproj
+++ b/WpfApp2.csproj
@@ -81,6 +81,9 @@
     </Compile>
     <Compile Include="ICard.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="ProductAddCard.xaml.cs">
+      <DependentUpon>ProductAddCard.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ProductModifier.xaml.cs">
       <DependentUpon>ProductModifier.xaml</DependentUpon>
     </Compile>
@@ -110,6 +113,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ProductAddCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ProductModifier.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -174,7 +181,14 @@
     <None Include="Images\ID_5.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Images\ID_6.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\None.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
